# GameJam2025

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  assets.txt  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci-actions.yaml
game/: controller.py  core.py  game.py  interface.py  item.py  map.py  movement.py  player.py
game/components/: controller.py  interface.py  item.py  map.py  movement.py  player.py
game/dataclasses/: player.py
game/enemies/: enemy.py  enemy_spawner.py  knight.py  pirate.py
game/enums/: direction.py  game.py  keyboard.py  tiles.py
game/utils/: functions.py  stats.py
tests/: test_controller.py  test_core.py  test_interface.py  test_main.py  test_player.py
